<?xml version="1.0"?>
<package format="2">
  <name>dynamixel-servo</name>
  <version>0.0.1</version>
  <description>The dynamixel-servo package</description>

  <maintainer email="synadyne@gmail.com">Bryan Butenhoff</maintainer>
  <license>BSD</license>
  <url type="website">http://bryanbutenhoff.com</url>
  <author email="synadyne@gmail.com">Bryan Butenhoff</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
